--- a/README
+++ b/README
@@ -1,9 +1,7 @@
-OnSIP XMPP JavaScript
----------------------
+XMMP Client Library
+-------------------
 
-The OnSIP XMPP Javascript library (oxjs) is a fully functional
-implementation of the OnSIP XMPP-API.  The my.onsip.com interface
-utilizes oxjs on top of strophe for it's XMPP & XMPP-API connectivity.
+The XC Library is an RFC 3920 and 3921 compliant XMPP Client library for JavaScript.
 
 Getting Started:
 
@@ -12,54 +10,52 @@ make doc
 
 Overview:
 
-This library is NOT a client side BOSH implementation.  It, wraps a BOSH connection to facilitate the process of subscribing to the OnSIPP XMPP pubsub services and making the OnSIP specific adhoc command calls.
+This library is NOT a client side BOSH implementation. Use a BOSH JavaScript implementation like Strophe or JSJaC as the underlying BOSH connection and this library to complete XMPP actions.
 
 
-
-  ---------------------------------------
+  +-------------------------------------+
   |       Client Side Web Browser       |
   |                                     |
-  |   ------------------------------    |
+  |   +----------------------------+    |
   |   |                            |    |
   |   |  Application Javascript    |    |
   |   |                            |    |
-  |   ------------------------------    |
-  |           ^             ^           |
-  |           |             |           |
-  |         OnSIP           |           |
-  |    XMPP API calls       |           |
-  |           |          standard       |
-  |           |        RFC 3920/3921    |
-  |           v         & XEP XMPP      |
-  |   ----------------   messaging      |
-  |   |              |      |           |
-  |   |     OXJS     |      |           |
-  |   |              |      v           |
-  |   ------------------------------    |
+  |   +----------------------------+    |
+  |                 ^                   |
+  |                 |                   |
+  |                 |                   |
+  |                 |                   |
+  |                 |                   |
+  |                 |                   |
+  |                 v                   |
+  |   +----------------------------+    |
+  |   |                            |    |
+  |   |             XC             |    |
+  |   |                            |    |
+  |   +----------------------------+    |
   |   |                            |    |
   |   |   JS XMPP Client Library   |    |
-  |   |     (strophe/jsjac)        |    |
-  |   ------------------------------    |
-  |               ^                     |
-  --------------- | ---------------------
-                  |
-                  |
-              BOSH/HTTP(s)
-   http://xmpp.org/extensions/xep-0124.html
-                  |
-                  |
-                  v
-    ------------------------------
-    |                            |
-    |        XMPP Server         |
-    |       (my.onsip.com)       |
-    ------------------------------
+  |   |       (strophe/jsjac)      |    |
+  |   +----------------------------+    |
+  |                 ^                   |
+  +---------------- | ------------------+
+                    |
+                    |
+                BOSH/HTTP(s)
+ http://xmpp.org/extensions/xep-0124.html
+                    |
+                    |
+                    v
+      +----------------------------+
+      |                            |
+      |        XMPP Server         |
+      |                            |
+      +----------------------------+
 
 Tests:
 
 You're probably just best off reading the tests to get an idea of how to use this library. You can open test/index.html in any browser to run the unit tests.
 
-Ignore 'make test', it's incomplete as is
 
 Examples:
 
